--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
-    "rollup": "^4.19.1"
+    "rollup": "^4.19.1",
+    "rollup-plugin-glslify": "^1.3.1"
   },
   "scripts": {
     "build": "rollup -c",
