--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "p5": ">=1.8.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "rollup": "^4.19.1",
-    "rollup-plugin-glslify": "^1.3.1"
+    "rollup-plugin-glslify": "^1.3.1",
+    "rollup-plugin-string": "^3.0.0"
   },
   "scripts": {
     "build": "rollup -c",
