--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "rollup-plugin-glslify": "^1.3.1",
     "rollup-plugin-string": "^3.0.0"
   },
+  "engines": {
+    "node": "22.11.0",
+    "npm": "10.9.0"
+  },
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w"
