Added test branch to workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,13 @@ name: Continuous Integration
 
 on:
   push:
-    branches: [ main ]
+    branches: 
+      - main
+      - 11-contributing-to-the-library-while-using-a-different-version-of-nodejs-or-npm-could-make-unexpected-changes-to-the-published-packages
   pull_request:
-    branches: [ main ]
+    branches: 
+      - main
+      - 11-contributing-to-the-library-while-using-a-different-version-of-nodejs-or-npm-could-make-unexpected-changes-to-the-published-packages
 
 jobs:
   build-and-test:
