--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "type": "module",
   "main": "dist/p5.asciify.min.js",
   "dependencies": {
-    "p5": ">=1.8.0"
+    "p5": ">=1.8.0",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-inject": "^5.0.5",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@types/p5": "^1.7.6",
     "rollup": "^4.25.0",
     "rollup-plugin-glslify": "^1.3.1",
     "rollup-plugin-string": "^3.0.0"
