--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "dist/p5.asciify.min.js",
   "dependencies": {
+    "opentype.js": "^1.3.4",
     "p5": ">=1.8.0",
     "tslib": "^2.8.1"
   },
