--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@types/p5": "^1.7.6",
     "rollup": "^4.25.0",
     "rollup-plugin-glslify": "^1.3.1",
     "rollup-plugin-string": "^3.0.0"
