--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "type": "module",
   "main": "dist/p5.asciify.min.js",
   "dependencies": {
-    "opentype.js": "^1.3.4",
-    "p5": ">=1.8.0",
-    "tslib": "^2.8.1"
+    "p5": ">=1.8.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.1",
@@ -18,7 +16,11 @@
     "@types/p5": "^1.7.6",
     "rollup": "^4.25.0",
     "rollup-plugin-glslify": "^1.3.1",
-    "rollup-plugin-string": "^3.0.0"
+    "rollup-plugin-string": "^3.0.0",
+    "vite": "^6.0.7",
+    "tslib": "^2.8.1",
+    "opentype.js": "^1.3.4",
+    "vitest": "^2.1.6"
   },
   "engines": {
     "node": "22.11.0",
@@ -26,7 +28,8 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w"
+    "dev": "rollup -c -w",
+    "vitest": "vitest run"
   },
   "repository": {
     "type": "git",
