added script to start vite dev server

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "vitest": "vitest run"
+    "vitest": "vitest run",
+    "vite": "vite"
   },
   "repository": {
     "type": "git",
