--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.6.3",
   "description": "Apply real-time ASCII conversion to your favourite p5.js sketches instantly.",
   "type": "module",
-  "main": "dist/p5.asciify.min.js",
+  "main": "./dist/p5.asciify.umd.js",
+  "module": "./dist/p5.asciify.esm.js",
+  "exports": {
+    ".": {
+      "import": "./dist/p5.asciify.esm.js",
+      "require": "./dist/p5.asciify.umd.js"
+    }
+  },
   "dependencies": {
     "p5": ">=1.8.0"
   },
@@ -14,12 +21,15 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/p5": "^1.7.6",
+    "opentype.js": "^1.3.4",
     "rollup": "^4.25.0",
     "rollup-plugin-glslify": "^1.3.1",
     "rollup-plugin-string": "^3.0.0",
-    "vite": "^6.0.7",
+    "terser": "^5.37.0",
     "tslib": "^2.8.1",
-    "opentype.js": "^1.3.4",
+    "vite": "^6.0.7",
+    "vite-plugin-glsl": "^1.3.1",
+    "vite-plugin-string": "^1.2.3",
     "vitest": "^2.1.6"
   },
   "engines": {
@@ -27,10 +37,9 @@
     "npm": "10.9.0"
   },
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "vitest": "vitest run",
-    "vite": "vite"
+    "build": "vite build",
+    "dev": "vite",
+    "vitest": "vitest run"
   },
   "repository": {
     "type": "git",
