--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,31 @@
 {
-    "compilerOptions": {
-      //"types": ["node", "@testing-library/jest-dom", "vitest/globals", "vite-plugin-glsl/ext"],
-      "target": "ESNext",
-      "useDefineForClassFields": true,
-      "lib": ["DOM", "DOM.Iterable", "ESNext"],
-      "allowJs": false,
-      "skipLibCheck": true,
-      "esModuleInterop": false,
-      "allowSyntheticDefaultImports": true,
-      "strict": true,
-      "forceConsistentCasingInFileNames": true,
-      "module": "ESNext",
-      "moduleResolution": "Node",
-      "resolveJsonModule": true,
-      "isolatedModules": true,
-      "noEmit": true,
-      "jsx": "react-jsx",
-      "paths": {
-        "@/*": ["./src/*"],
-        "@test-utils": ["./test-utils"]
-      },
-      "typeRoots": ["./node_modules/@types", "./types"],
-    },
-    "include": ["src", "test-utils"]
-  }
-  
+  "compilerOptions": {
+    "target": "ESNext", 
+    
+    // Let the bundler produce UMD/ES out of ESNext modules
+    "module": "ESNext",  
+    "moduleResolution": "Node",
+
+    "lib": ["DOM", "ESNext"],
+
+    // Generate .d.ts files
+    "declaration": true,
+    "declarationMap": false,     // or true if you want .d.ts.map
+    "emitDeclarationOnly": false,
+    "declarationDir": "dist/types",
+    
+    // Output compiled .js and .d.ts to /dist
+    "outDir": "dist",            
+    "rootDir": "src/lib",
+
+    // Interop settings
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+
+    // Type-checking
+    "strict": true,
+    "skipLibCheck": false,
+    "forceConsistentCasingInFileNames": true,
+  },
+  "include": ["src"]
+}
