--- a/package.json
+++ b/package.json
@@ -15,8 +15,16 @@
     "p5": ">=1.8.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.3",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/html": "^8.4.7",
+    "@storybook/html-vite": "^8.4.7",
+    "@storybook/test": "^8.4.7",
     "@types/p5": "^1.7.6",
+    "storybook": "^8.4.7",
     "terser": "^5.37.0",
     "tslib": "^2.8.1",
     "vite": "^6.0.7",
@@ -30,7 +38,9 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite",
-    "vitest": "vitest run"
+    "vitest": "vitest run",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "repository": {
     "type": "git",
