Update TypeScript configuration to include only the lib directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,5 @@
     "skipLibCheck": false,
     "forceConsistentCasingInFileNames": true,
   },
-  "include": ["src"]
+  "include": ["src/lib"]
 }
