--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.3",
-    "@rollup/plugin-typescript": "^12.1.2",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
     "@storybook/blocks": "^8.4.7",
@@ -27,6 +26,7 @@
     "storybook": "^8.4.7",
     "tslib": "^2.8.1",
     "vite": "^6.0.7",
+    "vite-plugin-dts": "^4.5.0",
     "vite-plugin-glsl": "^1.3.1",
     "vitest": "^2.1.6"
   },
