--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/p5": "^1.7.6",
     "storybook": "^8.4.7",
     "tslib": "^2.8.1",
+    "typescript": "^5.7.3",
     "vite": "^6.0.7",
     "vite-plugin-dts": "^4.5.0",
     "vite-plugin-glsl": "^1.3.1",
@@ -35,7 +36,7 @@
     "npm": "10.9.0"
   },
   "scripts": {
-    "build": "vite build",
+    "build": "vite build && tsc",
     "dev": "vite",
     "vitest": "vitest run",
     "storybook": "storybook dev -p 6006",
