moved statically defined .d.ts files, which get rid of some TypeScript linting errors.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,8 @@
     "strict": true,
     "skipLibCheck": false,
     "forceConsistentCasingInFileNames": true,
+
+    
   },
-  "include": ["src/lib"]
+  "include": ["src/lib", "src/types"]
 }
