--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/p5": "^1.7.6",
     "storybook": "^8.4.7",
     "tslib": "^2.8.1",
+    "typedoc": "^0.27.6",
     "typescript": "^5.7.3",
     "vite": "^6.0.7",
     "vite-plugin-glsl": "^1.3.1",
