--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "storybook": "^8.4.7",
     "tslib": "^2.8.1",
     "typedoc": "^0.27.6",
+    "typedoc-plugin-markdown": "^4.4.1",
     "typescript": "^5.7.3",
     "vite": "^6.0.7",
     "vite-plugin-glsl": "^1.3.1",
@@ -38,6 +39,7 @@
   "scripts": {
     "build": "vite build && tsc",
     "dev": "vite --host",
+    "docs": "typedoc",
     "vitest": "vitest run",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
