Add new scripts for building and watching documentation

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "scripts": {
     "build": "vite build && tsc",
     "dev": "vite --host",
-    "docs": "typedoc",
+    "build-docs": "typedoc",
+    "dev-docs": "typedoc --watch",
     "vitest": "vitest run",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
