--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,24 +54,13 @@ jobs:
     - name: Verify Build Output
       run: |
         # Check if the output files exist
-        if [ ! -f dist/p5.asciify.js ]; then
-          echo "dist/p5.asciify.js not found!"
+        if [ ! -f dist/p5.asciify.umd.js ]; then
+          echo "dist/p5.asciify.umd.js not found!"
           exit 1
         fi
 
-        if [ ! -f dist/p5.asciify.min.js ]; then
-          echo "dist/p5.asciify.min.js not found!"
-          exit 1
-        fi
-
-        # Check if the files are not empty
-        if [ ! -s dist/p5.asciify.js ]; then
-          echo "dist/p5.asciify.js is empty!"
-          exit 1
-        fi
-
-        if [ ! -s dist/p5.asciify.min.js ]; then
-          echo "dist/p5.asciify.min.js is empty!"
+        if [ ! -f dist/p5.asciify.esm.js ]; then
+          echo "dist/p5.asciify.esm.js not found!"
           exit 1
         fi
 
