update types path in package.json to reflect new directory structure

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.7.0",
   "description": "Apply real-time ASCII conversion to your favourite p5.js sketches instantly.",
   "type": "module",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/types/index.d.ts",
   "main": "./dist/p5.asciify.umd.js",
   "module": "./dist/p5.asciify.esm.js",
   "exports": {
     ".": {
+      "types": "./dist/types/index.d.ts",
       "import": "./dist/p5.asciify.esm.js",
       "require": "./dist/p5.asciify.umd.js"
     }
