--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "p5.asciify",
   "version": "0.7.4",
-  "description": "Apply real-time ASCII conversion to your favourite p5.js sketches instantly.",
+  "description": "Apply real-time ASCII conversion to your favorite p5.js sketches instantly.",
   "type": "module",
   "types": "./dist/types/index.d.ts",
   "main": "./dist/p5.asciify.umd.js",
