--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -12,4 +12,4 @@ lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cl
 polar: # Replace with a single Polar username
 buy_me_a_coffee: # Replace with a single Buy Me a Coffee username
 thanks_dev: # Replace with a single thanks.dev username
-custom: [https://etherscan.io/address/0xAA14d79ccF069d3E57eeCb6822c1F241e0d46C42, https://tzkt.io/humanbydefinition.tez]
+custom: [https://tzkt.io/humanbydefinition.tez, https://etherscan.io/address/0xAA14d79ccF069d3E57eeCb6822c1F241e0d46C42]
