--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/p5": "^1.7.6",
+    "@vitest/ui": "^3.1.2",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
     "vite": "^6.3.4",
@@ -31,7 +32,7 @@
   "scripts": {
     "build": "vite build && tsc",
     "dev": "vite --host",
-    "vitest": "vitest run"
+    "vitest": "vitest --ui"
   },
   "repository": {
     "type": "git",
