--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/p5": "^1.7.6",
     "@vitest/ui": "^3.1.2",
     "tslib": "^2.8.1",
+    "typedoc": "^0.28.3",
+    "typedoc-plugin-markdown": "^4.6.3",
     "typescript": "^5.8.3",
     "vite": "^6.3.4",
     "vite-plugin-glsl": "^1.3.1",
@@ -32,7 +34,9 @@
   "scripts": {
     "build": "vite build && tsc",
     "dev": "vite --host",
-    "vitest": "vitest --ui"
+    "vitest": "vitest --ui",
+    "build-docs": "typedoc",
+    "dev-docs": "typedoc --watch"
   },
   "repository": {
     "type": "git",
