Add type definitions for renderers and utils in package.json

--- a/package.json
+++ b/package.json
@@ -11,6 +11,34 @@
       "types": "./dist/types/index.d.ts",
       "import": "./dist/p5.asciify.esm.js",
       "require": "./dist/p5.asciify.umd.js"
+    },
+    "./renderers": {
+      "types": "./dist/types/renderers/index.d.ts",
+      "import": "./dist/p5.asciify.esm.js",
+      "require": "./dist/p5.asciify.umd.js"
+    },
+    "./renderers/2d": {
+      "types": "./dist/types/renderers/2d/index.d.ts",
+      "import": "./dist/p5.asciify.esm.js",
+      "require": "./dist/p5.asciify.umd.js"
+    },
+    "./renderers/2d/feature": {
+      "types": "./dist/types/renderers/2d/feature/index.d.ts",
+      "import": "./dist/p5.asciify.esm.js",
+      "require": "./dist/p5.asciify.umd.js"
+    },
+    "./utils": {
+      "types": "./dist/types/utils/index.d.ts",
+      "import": "./dist/p5.asciify.esm.js",
+      "require": "./dist/p5.asciify.umd.js"
+    }
+  },
+  "typesVersions": {
+    "*": {
+      "renderers": ["./dist/types/renderers/index.d.ts"],
+      "renderers/2d": ["./dist/types/renderers/2d/index.d.ts"],
+      "renderers/2d/feature": ["./dist/types/renderers/2d/feature/index.d.ts"],
+      "utils": ["./dist/types/utils/index.d.ts"]
     }
   },
   "dependencies": {
