--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "p5.asciify",
-  "version": "0.9.1-beta.1",
+  "version": "0.9.1-beta.2",
   "description": "Apply real-time ASCII conversion to your favorite p5.js sketches instantly.",
   "type": "module",
   "types": "./dist/types/index.d.ts",
@@ -35,10 +35,18 @@
   },
   "typesVersions": {
     "*": {
-      "renderers": ["./dist/types/renderers/index.d.ts"],
-      "renderers/2d": ["./dist/types/renderers/2d/index.d.ts"],
-      "renderers/2d/feature": ["./dist/types/renderers/2d/feature/index.d.ts"],
-      "utils": ["./dist/types/utils/index.d.ts"]
+      "renderers": [
+        "./dist/types/renderers/index.d.ts"
+      ],
+      "renderers/2d": [
+        "./dist/types/renderers/2d/index.d.ts"
+      ],
+      "renderers/2d/feature": [
+        "./dist/types/renderers/2d/feature/index.d.ts"
+      ],
+      "utils": [
+        "./dist/types/utils/index.d.ts"
+      ]
     }
   },
   "dependencies": {
