updated docs package

--- a/docs/package.json
+++ b/docs/package.json
@@ -22,9 +22,8 @@
     "@mdx-js/react": "^3.0.0",
     "@tabler/icons-react": "^3.31.0",
     "clsx": "^2.0.0",
-    "p5": "1.11.5",
-    "p5.asciify": "0.9.0-beta.5",
-    "plugin-image-zoom": "github:flexanalytics/plugin-image-zoom",
+    "p5": "^1.11.5",
+    "p5.asciify": "0.9.5",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
